--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.3",
     "faker": "^4.1.0",
     "graphql": "^0.10.5",
+    "graphql-date": "^1.0.3",
     "graphql-tools": "^1.1.0",
     "mongoose": "^4.11.3"
   },
@@ -21,10 +22,11 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "eslint": "^4.2.0",
+    "eslint": "^4.12.0",
     "eslint-config-equimper": "^2.2.1",
     "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-react": "^7.5.1",
     "nodemon": "^1.11.0",
-    "prettier": "^1.5.3"
+    "prettier": "^1.8.2"
   }
 }
